# SparseFlow

./: .gitignore  .handoff.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  aggregate_stage7_9_final.py  analyze_stage7_7_union.py  audit_int8_container.py  bench_stage7_7_grouped.py  bench_stage7_8_grouped.py  build_stage7_4_report.py  calibrate_stage7_4_threads.py  capture_stage7_7_hidden.py  capture_stage7_7_routes.py  common.py  freeze_quality_manifest.py  io_stage7_4.py  native_stage7_5.py  observer_stage7_5.py  observer_stage7_6.py  paired_stage7_6.py  prepare_generic_offload.py  run_cpu.py  run_generic_offload.py  run_sparseflow.py  run_stage7_11_api_contract.py  run_stage7_11_cache_pilot.py  run_stage7_11_environment.py  run_stage7_11_installation_check.py  run_stage7_11_laptop.py  run_stage7_11_server_acceptance.py  run_stage7_4_matrix.py  run_stage7_5_cache_matrix.py  run_stage7_5_formal_matrix.py  run_stage7_5_quality_matrix.py  run_stage7_8_cohort.py  run_stage7_8_formal.py  run_stage7_9_cli_smoke.py  run_stage7_9_cold_io.py  run_stage7_9_native_build.py  run_stage7_9_prepare_resume.py  run_stage7_9_validation.py  score_choices.py  (+14 more)
docs/: api_contract.md  architecture_principles.md  benchmark_setting.md  content_series_plan.md  implementation_plan.md  installation.md  stage7_10_server_plan.md  stage7_11_laptop_runtime_plan.md  stage7_7_plan.md  stage7_8_plan.md  stage7_9_closure_fixes.md  stage7_9_plan.md
native/: grouped_moe.cpp  int8_vnni.cpp  moe_dispatch.cpp
scripts/: bootstrap_uv_windows.ps1  setup_windows.ps1  use_runtime_windows.ps1
(+315 files in other folders)
