[project]
name = "sparseflow"
version = "0.1.0"
description = "Tiered-memory tooling for sparse expert models."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
runtime = [
    "torch",
    "transformers",
    "safetensors",
    "accelerate",
]
dev = ["pytest"]

[project.scripts]
sparseflow = "sparseflow.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
