[project]
name = "sparseflow"
version = "0.1.0"
description = "Tiered-memory tooling for sparse expert models."
requires-python = ">=3.10"
dependencies = [
    "py-cpuinfo>=9,<10",
]

[project.optional-dependencies]
runtime = [
    "torch>=2.9,<2.10",
    "transformers>=5,<6",
    "safetensors>=0.6,<1",
    "accelerate>=1.10,<2",
    "ninja>=1.11,<2",
]
dev = ["pytest"]

[project.scripts]
sparseflow = "sparseflow.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
